@@ -21,7 +21,7 @@
 .\" USA.
 .TH GAIM 1
 .SH NAME
-gaim v0.11.0pre10 \- Instant Messaging client
+gaim v0.11.0pre11 \- Instant Messaging client
 .SH SYNOPSIS
 .TP 5
 \fBgaim\fR
